Embed tools: prevent invisible wall on hide

--- a/src/less/editor/embed-tools.less
+++ b/src/less/editor/embed-tools.less
@@ -16,17 +16,19 @@
 
 /* embed toolbar */
 .embed-tools {
+    visibility: hidden;
     height: 100%;
     position:absolute;
     margin: 12px 0;
     padding: 0px 0px;
     width: 100%;
     opacity:0;
-    transition: opacity .1s ease-in-out;
+    transition: opacity .1s ease-in-out visibility .1s;
     transition-delay: 1s;
 }
 
 .embed-tools.active {
+    visibility: visible;
     display:block;
     opacity:1;
     transition-delay: 0s;
